--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -34,12 +34,12 @@ body {
 .form-control {
     width: 100%;
     min-height: 38px;
-    font-size: 15px;
+    font-size: 16px;
     border: 1px solid #c8c8c8;
 }
 
 .form-group {
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
 }
 
 input {
@@ -47,10 +47,10 @@ input {
     outline: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+/*h1, h2, h3, h4, h5, h6 {*/
+/*    margin-top: 20px;*/
+/*    margin-bottom: 20px;*/
+/*}*/
 
 h1 {
     font-size: 1.7em;
@@ -63,7 +63,7 @@ a {
 button {
     box-shadow: none;
     border: 1px solid transparent;
-    font-size: 14px;
+    font-size: 16px;
     outline: none;
     line-height: 100%;
     white-space: nowrap;
@@ -127,17 +127,15 @@ button.accent {
     height: 100%;
 }
 
-.chat-container {
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #fff;
-    box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
-    margin-top: 30px;
-    height: calc(100% - 60px);
-    max-height: 600px;
-    position: relative;
-}
+/*.chat-container {*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*    background-color: #fff;*/
+/*    box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);*/
+/*    margin-top: 30px;*/
+/*    height: calc(100% - 60px);*/
+/*    position: relative;*/
+/*}*/
 
 #chat-page ul {
     list-style-type: none;
@@ -155,7 +153,7 @@ button.accent {
 
 #chat-page ul li {
     line-height: 1.5rem;
-    padding: 10px 20px;
+    padding: 10px 0px;
     margin: 0;
     border-bottom: 1px solid #f4f4f4;
 }
@@ -170,58 +168,60 @@ button.accent {
     clear: both;
 }
 
-#chat-page .event-message p {
-    color: #777;
-    font-size: 14px;
-    word-wrap: break-word;
-}
+/*#chat-page .event-message p {*/
+/*    color: #777;*/
+/*    font-size: 16px;*/
+/*    color: #373AFF;*/
+/*    word-wrap: break-word;*/
+/*}*/
 
 #chat-page .chat-message {
-    padding-left: 68px;
-    position: relative;
+    /*padding-left: 68px;*/
+    /*position: relative;*/
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     gap: 10px;
+    font-size: 20px;
 }
 
-#chat-page .chat-message i {
-    position: absolute;
-    width: 42px;
-    height: 42px;
-    overflow: hidden;
-    left: 10px;
-    display: flex;
-    flex-direction: column;
-    vertical-align: middle;
-    font-size: 18px;
-    line-height: 42px;
-    color: #fff;
-    text-align: center;
-    border-radius: 50%;
-    font-style: normal;
-    text-transform: uppercase;
-}
+/*#chat-page .chat-message i {*/
+/*    position: absolute;*/
+/*    width: 42px;*/
+/*    height: 42px;*/
+/*    overflow: hidden;*/
+/*    left: 10px;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    vertical-align: middle;*/
+/*    font-size: 18px;*/
+/*    line-height: 42px;*/
+/*    color: #fff;*/
+/*    text-align: center;*/
+/*    border-radius: 50%;*/
+/*    font-style: normal;*/
+/*    text-transform: uppercase;*/
+/*}*/
 
-#chat-page .chat-message span {
-    color: #333;
-    font-weight: 600;
-}
+/*#chat-page .chat-message span {*/
+/*    color: #333;*/
+/*    font-weight: 600;*/
+/*}*/
 
-#chat-page .chat-message p {
-    color: #43464b;
-}
+/*#chat-page .chat-message p {*/
+/*    color: #43464b;*/
+/*}*/
 
-#messageForm .input-group input {
-    float: left;
-    width: calc(100% - 85px);
-}
+/*#messageForm .input-group input {*/
+/*    float: left;*/
+/*    width: calc(100% - 85px);*/
+/*}*/
 
-#messageForm .input-group button {
-    float: left;
-    width: 80px;
-    height: 38px;
-    margin-left: 5px;
-}
+/*#messageForm .input-group button {*/
+/*    float: left;*/
+/*    width: 80px;*/
+/*    height: 38px;*/
+/*    margin-left: 5px;*/
+/*}*/
 
 .chat-header {
     text-align: center;
@@ -244,9 +244,8 @@ button.accent {
 }
 .chat-message .avatar {
     position: absolute;
-    width: 42px;
-    height: 42px;
-    left: 10px;
+    width: 80px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -255,19 +254,19 @@ button.accent {
 }
 
 .chat-message .avatar svg {
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    height: 30px;
     fill: white;
 }
 
 
 @media screen and (max-width: 730px) {
 
-    .chat-container {
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 10px;
-    }
+    /*.chat-container {*/
+    /*    margin-left: 10px;*/
+    /*    margin-right: 10px;*/
+    /*    margin-top: 10px;*/
+    /*}*/
 }
 
 @media screen and (max-width: 480px) {
@@ -277,8 +276,8 @@ button.accent {
 
     .username-page-container {
         width: auto;
-        margin-left: 15px;
-        margin-right: 15px;
+        /*margin-left: 15px;*/
+        /*margin-right: 15px;*/
         padding: 25px;
     }
 
@@ -286,13 +285,13 @@ button.accent {
         height: calc(100% - 120px);
     }
 
-    #messageForm .input-group button {
-        width: 65px;
-    }
+    /*#messageForm .input-group button {*/
+    /*    width: 65px;*/
+    /*}*/
 
-    #messageForm .input-group input {
-        width: calc(100% - 70px);
-    }
+    /*#messageForm .input-group input {*/
+    /*    width: calc(100% - 70px);*/
+    /*}*/
 
     .chat-header {
         padding: 10px;
